@@ -33,3 +33,7 @@ PROCESS_PREDICTOR_CMD=python
 
 # for scoreInit, scoreVision
 #SCORE_FILTER_CONDITION=			option values: [null], single_piano, 1or2pianos
+
+
+# for sparititoConstructor
+#BEAD_PICKER_URL=				[required]
